Archive2/3c/cd92dd6ce71a2d/output
main.cpp:21:75: error: expected ']'
        value_pack<T,  pack::array[(indices==p1 || indices==p2)*(p1^p2) ^ indices)]...> {};
                                                                                 ^
main.cpp:21:28: note: to match this '['
        value_pack<T,  pack::array[(indices==p1 || indices==p2)*(p1^p2) ^ indices)]...> {};
                                  ^
main.cpp:21:82: error: expected class name
        value_pack<T,  pack::array[(indices==p1 || indices==p2)*(p1^p2) ^ indices)]...> {};
                                                                                        ^
main.cpp:25:12: error: no type named 'type' in 'SwapTs<int, 1, 2, value_pack<int, 0, 1, 2, 3>, std::__1::integer_sequence<unsigned long, 0, 1, 2, 3> >'; did you mean 'value_pack<int, 0, 1, 2, 3>::type'?
        using t = SwapTs<int, 1, 2, value_pack<int, 0, 1, 2, 3>>::type;
                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                  value_pack<int, 0, 1, 2, 3>::type
main.cpp:8:8: note: 'value_pack<int, 0, 1, 2, 3>::type' declared here
        using type = value_pack;
              ^
3 errors generated.
